--- a/RainmeterEditor/App.xaml
+++ b/RainmeterEditor/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="RainmeterEditor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="UI/MainWindow.xaml">
+             StartupUri="UI/MainWindow.xaml"
+             Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
