--- a/RainmeterEditor/App.xaml
+++ b/RainmeterEditor/App.xaml
@@ -4,6 +4,10 @@
              StartupUri="UI/MainWindow.xaml"
              Startup="Application_Startup">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="UI/Styles/Common.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
