--- a/RainmeterEditor/UI/Dialogs/CreateDocumentDialog.xaml
+++ b/RainmeterEditor/UI/Dialogs/CreateDocumentDialog.xaml
@@ -1,7 +1,10 @@
 ﻿<Window x:Class="RainmeterEditor.UI.Dialogs.CreateDocumentDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="CreateDocumentDialog" Height="250" Width="400">
+        Title="Create..." Height="250" Width="400"
+        WindowStartupLocation="CenterOwner"
+        WindowStyle="ToolWindow" ShowInTaskbar="False">
+    
     <Grid Background="WhiteSmoke">
         <Grid.RowDefinitions>
             <RowDefinition />
