--- a/RainmeterEditor/UI/MainWindow.xaml
+++ b/RainmeterEditor/UI/MainWindow.xaml
@@ -4,7 +4,8 @@
         xmlns:ui="clr-namespace:RainmeterEditor.UI"
         xmlns:ad="clr-namespace:Xceed.Wpf.AvalonDock;assembly=Xceed.Wpf.AvalonDock"
         xmlns:adlayout="clr-namespace:Xceed.Wpf.AvalonDock.Layout;assembly=Xceed.Wpf.AvalonDock"
-        Title="Rainmeter Studio" Height="350" Width="525">
+        Title="Rainmeter Studio" Height="350" Width="525"
+        ResizeMode="CanResizeWithGrip" >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
