--- a/RainmeterEditor/UI/MainWindow.xaml
+++ b/RainmeterEditor/UI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RainmeterEditor.MainWindow"
+﻿<Window x:Class="RainmeterEditor.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ui="clr-namespace:RainmeterEditor.UI"
@@ -6,6 +6,11 @@
         xmlns:adlayout="clr-namespace:Xceed.Wpf.AvalonDock.Layout;assembly=Xceed.Wpf.AvalonDock"
         Title="Rainmeter Studio" Height="350" Width="525"
         ResizeMode="CanResizeWithGrip" >
+    
+    <Window.Resources>
+        
+    </Window.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -21,7 +26,23 @@
         <!-- Menu bar -->
         <Menu Grid.Row="0" Grid.ColumnSpan="10">
             <MenuItem Header="_File">
-                <MenuItem Header="_New Item..." Click="File_New_Click"/>
+                <MenuItem Header="_New">
+                    <MenuItem Header="_File..." 
+                              DataContext="{DynamicResource DocumentCreateCommand}"
+                              Command="{Binding}"
+                              ToolTip="{Binding Tooltip}"
+                              InputGestureText="{Binding ShortcutText}">
+                        <MenuItem.Icon>
+                            <Image DataContext="{DynamicResource DocumentCreateCommand}"
+                                   Source="{Binding Icon}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="_Project..." Command="{DynamicResource CreateFileCommand}">
+                        <MenuItem.Icon>
+                            <Image Source="/Resources/Icons/project_star_16.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
                 <MenuItem Header="_Open..." />
                 <Separator />
                 <MenuItem Header="_Close" />
@@ -32,6 +53,17 @@
         </Menu>
 
         <!-- Toolbar -->
+        <ToolBarTray Grid.Row="1">
+            <ToolBar>
+                <Button Name="buttonBackward" ToolTip="Navigate backward">
+                    <Image Width="16" Height="16" Source="/Resources/Icons/arrow_backward_16.png" />
+                </Button>
+                <Button Name="buttonForward" ToolTip="Navigate forward">
+                    <Image Width="16" Height="16" Source="/Resources/Icons/arrow_forward_16.png" />
+                </Button>
+                <Separator />
+            </ToolBar>
+        </ToolBarTray>
 
         <!-- Grid splitter -->
         <GridSplitter Grid.Row="2" Grid.Column="1"
