--- a/RainmeterStudio/UI/App.xaml
+++ b/RainmeterStudio/UI/App.xaml
@@ -1,12 +1,10 @@
-﻿<Application x:Class="RainmeterStudio.App"
+﻿<Application x:Class="RainmeterStudio.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="UI/MainWindow.xaml"
-             Startup="Application_Startup">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="UI/Styles/Common.xaml" />
+                <ResourceDictionary Source="Styles/Common.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <Style TargetType="ToolBar">
