--- a/RainmeterStudio/UI/Dialogs/CreateDocumentDialog.xaml
+++ b/RainmeterStudio/UI/Dialogs/CreateDocumentDialog.xaml
@@ -3,16 +3,29 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Create..." Height="250" Width="400"
         WindowStartupLocation="CenterOwner"
-        WindowStyle="ToolWindow" ShowInTaskbar="False">
+        WindowStyle="ToolWindow" ShowInTaskbar="False"
+        Background="WhiteSmoke" >
     
-    <Grid Background="WhiteSmoke">
+    <Grid Margin="2px">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="2" />
+            <ColumnDefinition Width="3*" />
+        </Grid.ColumnDefinitions>
+        
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+
+        <ListView Name="listCategories" Grid.Row="0" Grid.Column="0"
+                  SelectionChanged="listCategories_SelectionChanged"
+                  Margin="1px"/>
         
-        <ListView Name="listFormats" Grid.Row="0">
+        <GridSplitter Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        
+        <ListView Name="listFormats" Grid.Row="0" Grid.Column="2" Margin="1px">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <DockPanel>
@@ -26,18 +39,9 @@
                     </DockPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
-            <ListView.GroupStyle>
-                <GroupStyle>
-                    <GroupStyle.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock FontWeight="Bold" FontSize="13pt" Text="{Binding Name}" />
-                        </DataTemplate>
-                    </GroupStyle.HeaderTemplate>
-                </GroupStyle>
-            </ListView.GroupStyle>
         </ListView>
         
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Grid.ColumnSpan="3">
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
@@ -49,15 +53,15 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Row="0">Path:</TextBlock>
-            <TextBox Name="textPath" Grid.Row="0" Grid.Column="1"></TextBox>
+            <TextBox Name="textPath" Grid.Row="0" Grid.Column="1" Margin="1px"></TextBox>
             <Button Grid.Row="0" Grid.Column="2">...</Button>
 
         </Grid>
-        
-        <StackPanel Grid.Row="2" Orientation="Horizontal"
+
+        <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Horizontal"
                     HorizontalAlignment="Right">
-            <Button Name="buttonCreate" Click="buttonCreate_Click" IsDefault="True">Create</Button>
-            <Button Name="buttonCancel" Click="buttonCancel_Click" IsCancel="True">Cancel</Button>
+            <Button Name="buttonCreate" Click="buttonCreate_Click" IsDefault="True" Margin="1px">Create</Button>
+            <Button Name="buttonCancel" Click="buttonCancel_Click" IsCancel="True" Margin="1px">Cancel</Button>
         </StackPanel>
         
     </Grid>
