--- a/RainmeterStudio/UI/Dialogs/CreateDocumentDialog.xaml
+++ b/RainmeterStudio/UI/Dialogs/CreateDocumentDialog.xaml
@@ -1,31 +1,21 @@
 ﻿<Window x:Class="RainmeterStudio.UI.Dialogs.CreateDocumentDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Create..." Height="250" Width="400"
+        xmlns:r="clr-namespace:RainmeterStudio.Resources"
+        Title="{x:Static r:Strings.CreateDocumentDialog_Title}" Height="250" Width="400"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow" ShowInTaskbar="False"
         Background="WhiteSmoke" >
     
-    <Grid Margin="2px">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="2" />
-            <ColumnDefinition Width="3*" />
-        </Grid.ColumnDefinitions>
-        
+    <Grid Margin="2px">        
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ListView Name="listCategories" Grid.Row="0" Grid.Column="0"
-                  SelectionChanged="listCategories_SelectionChanged"
-                  Margin="1px"/>
-        
-        <GridSplitter Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        
-        <ListView Name="listFormats" Grid.Row="0" Grid.Column="2" Margin="1px">
+        <ListView Name="listTemplates" Grid.Row="0" Margin="1px"
+                  SelectionChanged="listFormats_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <DockPanel>
@@ -41,7 +31,7 @@
             </ListView.ItemTemplate>
         </ListView>
         
-        <Grid Grid.Row="1" Grid.ColumnSpan="3">
+        <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
@@ -52,13 +42,16 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0">Path:</TextBlock>
+            <TextBlock Grid.Row="0" Text="{x:Static r:Strings.CreateDocumentDialog_Name}" />
             <TextBox Name="textPath" Grid.Row="0" Grid.Column="1" Margin="1px"></TextBox>
-            <Button Grid.Row="0" Grid.Column="2">...</Button>
 
+            <TextBlock Grid.Row="1">Path:</TextBlock>
+            <TextBox Name="textPath1" Grid.Row="1" Grid.Column="1" Margin="1px"></TextBox>
+            <Button Grid.Row="1" Grid.Column="2">...</Button>
+            
         </Grid>
 
-        <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Horizontal"
+        <StackPanel Grid.Row="2" Orientation="Horizontal"
                     HorizontalAlignment="Right">
             <Button Name="buttonCreate" Click="buttonCreate_Click" IsDefault="True" Margin="1px">Create</Button>
             <Button Name="buttonCancel" Click="buttonCancel_Click" IsCancel="True" Margin="1px">Cancel</Button>
