--- a/RainmeterStudio/UI/Dialogs/CreateProjectDialog.xaml
+++ b/RainmeterStudio/UI/Dialogs/CreateProjectDialog.xaml
@@ -2,9 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:r="clr-namespace:RainmeterStudio.Resources"
-        Title="{x:Static r:Strings.CreateProjectDialog_Title}" Height="320" Width="480"
+        xmlns:p="clr-namespace:RainmeterStudio.Properties"
+        Title="{x:Static r:Strings.CreateProjectDialog_Title}" Width="600" Height="400" 
         WindowStartupLocation="CenterOwner"
-        WindowStyle="ToolWindow" ShowInTaskbar="False">
+        WindowStyle="ToolWindow" ShowInTaskbar="False"
+        Closed="Window_Closed">
 
     <Grid Background="WhiteSmoke">
         <Grid.RowDefinitions>
@@ -53,8 +55,10 @@
             
             <!-- Location -->
             <TextBlock Grid.Row="1" Text="{x:Static r:Strings.CreateProjectDialog_Location}" />
+            
             <ComboBox Name="textLocation" IsEditable="True"
                       Grid.Row="1" Grid.Column="1" />
+            
             <Button Grid.Row="1" Grid.Column="2" Content="{x:Static r:Strings.Dialog_Browse}"/>
             <CheckBox Name="checkLocationDefault" 
                       Grid.Row="1" Grid.Column="3" 
@@ -63,14 +67,13 @@
 
             <!-- Path -->
             <TextBlock Grid.Row="2" Text="{x:Static r:Strings.CreateProjectDialog_Path}"/>
-            <ComboBox Name="textPath" 
-                      IsEditable="True"
-                     Grid.Row="2" Grid.Column="1" />
+            <TextBox Name="textPath" Grid.Row="2" Grid.Column="1" />
             <Button Grid.Row="2" Grid.Column="2" Content="{x:Static r:Strings.Dialog_Browse}" />
+            
             <CheckBox Name="checkCreateDirectory" 
                       Grid.Row="2" Grid.Column="3" 
                       Content="{x:Static r:Strings.CreateProjectDialog_PathCreateFolder}"
-                      IsChecked="True"
+                      IsChecked="{Binding Source={x:Static p:Settings.Default}, Path=CreateProjectDialog_CreateDirectoryCheckbox, Mode=TwoWay}"
                       Checked="checkCreateDirectory_CheckChanged"
                       Unchecked="checkCreateDirectory_CheckChanged"
                       VerticalAlignment="Center"/>
@@ -79,8 +82,8 @@
 
         <StackPanel Grid.Row="2" Orientation="Horizontal"
                     HorizontalAlignment="Right">
-            <Button Command="{Binding CreateCommand}" IsDefault="True" Content="{x:Static r:Strings.Dialog_Create}" />
-            <Button Command="{Binding CancelCommand}" IsCancel="True" Content="{x:Static r:Strings.Dialog_Cancel}" />
+            <Button Name="buttonCreate" IsDefault="True" Content="{x:Static r:Strings.Dialog_Create}" Click="buttonCreate_Click"/>
+            <Button Name="buttonCancel" IsCancel="True" Content="{x:Static r:Strings.Dialog_Cancel}" Click="buttonCancel_Click" />
         </StackPanel>
 
     </Grid>
