--- a/RainmeterStudio/UI/Dialogs/CreateProjectDialog.xaml
+++ b/RainmeterStudio/UI/Dialogs/CreateProjectDialog.xaml
@@ -59,23 +59,21 @@
             <ComboBox Name="textLocation" IsEditable="True"
                       Grid.Row="1" Grid.Column="1" />
             
-            <Button Grid.Row="1" Grid.Column="2" Content="{x:Static r:Strings.Dialog_Browse}"/>
+            <Button Name="buttonBrowse"
+                    Grid.Row="1" Grid.Column="2" 
+                    Content="{x:Static r:Strings.Dialog_Browse}"
+                    Click="buttonBrowse_Click" />
+            
             <CheckBox Name="checkLocationDefault" 
                       Grid.Row="1" Grid.Column="3" 
                       Content="{x:Static r:Strings.CreateProjectDialog_LocationDefault}" 
                       VerticalAlignment="Center"/>
 
             <!-- Path -->
-            <TextBlock Grid.Row="2" Text="{x:Static r:Strings.CreateProjectDialog_Path}"/>
-            <TextBox Name="textPath" Grid.Row="2" Grid.Column="1" />
-            <Button Grid.Row="2" Grid.Column="2" Content="{x:Static r:Strings.Dialog_Browse}" />
-            
             <CheckBox Name="checkCreateDirectory" 
                       Grid.Row="2" Grid.Column="3" 
                       Content="{x:Static r:Strings.CreateProjectDialog_PathCreateFolder}"
                       IsChecked="{Binding Source={x:Static p:Settings.Default}, Path=CreateProjectDialog_CreateDirectoryCheckbox, Mode=TwoWay}"
-                      Checked="checkCreateDirectory_CheckChanged"
-                      Unchecked="checkCreateDirectory_CheckChanged"
                       VerticalAlignment="Center"/>
 
         </Grid>
