Fixes for project manager

--- a/RainmeterStudio/UI/Dialogs/CreateDocumentDialog.xaml
+++ b/RainmeterStudio/UI/Dialogs/CreateDocumentDialog.xaml
@@ -34,7 +34,6 @@
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition />
-                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -43,18 +42,14 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Row="0" Text="{x:Static r:Strings.CreateDocumentDialog_Name}" />
-            <TextBox Name="textPath" Grid.Row="0" Grid.Column="1" Margin="1px"></TextBox>
-
-            <TextBlock Grid.Row="1">Path:</TextBlock>
-            <TextBox Name="textPath1" Grid.Row="1" Grid.Column="1" Margin="1px"></TextBox>
-            <Button Grid.Row="1" Grid.Column="2">...</Button>
+            <TextBox Name="textName" Grid.Row="0" Grid.Column="1" Margin="1px" TextChanged="textName_TextChanged"/>
             
         </Grid>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal"
                     HorizontalAlignment="Right">
-            <Button Name="buttonCreate" Click="buttonCreate_Click" IsDefault="True" Margin="1px">Create</Button>
-            <Button Name="buttonCancel" Click="buttonCancel_Click" IsCancel="True" Margin="1px">Cancel</Button>
+            <Button Name="buttonCreate" Content="{x:Static r:Strings.Dialog_Create}" IsDefault="True" Margin="1px" Click="buttonCreate_Click" />
+            <Button Name="buttonCancel" Content="{x:Static r:Strings.Dialog_Cancel}" IsCancel="True" Margin="1px" Click="buttonCancel_Click" />
         </StackPanel>
         
     </Grid>
