--- a/RainmeterStudio/UI/MainWindow.xaml
+++ b/RainmeterStudio/UI/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="RainmeterStudio.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:ui="clr-namespace:RainmeterStudio.UI"
+        xmlns:uiPanels="clr-namespace:RainmeterStudio.UI.Panels"
         xmlns:ad="clr-namespace:Xceed.Wpf.AvalonDock;assembly=Xceed.Wpf.AvalonDock"
         xmlns:adlayout="clr-namespace:Xceed.Wpf.AvalonDock.Layout;assembly=Xceed.Wpf.AvalonDock"
         xmlns:r="clr-namespace:RainmeterStudio.Resources"
@@ -104,7 +104,7 @@
                     <adlayout:LayoutAnchorablePaneGroup DockWidth="250" Orientation="Vertical">
                         <adlayout:LayoutAnchorablePane>
                             <adlayout:LayoutAnchorable Title="Project">
-                                <ui:ProjectPanel x:Name="projectPanel" />
+                                <uiPanels:ProjectPanel x:Name="projectPanel" />
                             </adlayout:LayoutAnchorable>
                             <adlayout:LayoutAnchorable Title="Outline" />
                         </adlayout:LayoutAnchorablePane>
