--- a/RainmeterStudio/UI/Panels/ProjectPanel.xaml
+++ b/RainmeterStudio/UI/Panels/ProjectPanel.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="RainmeterStudio.UI.ProjectPanel"
+﻿<UserControl x:Class="RainmeterStudio.UI.Panels.ProjectPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -55,7 +55,7 @@
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                     <DockPanel LastChildFill="True">
-                        <Image DockPanel.Dock="Left" Width="16" Height="16" Source="{Binding Data.Reference, Converter={StaticResource IconConverter}}" />
+                        <Image DockPanel.Dock="Left" Width="16" Height="16" Source="{Binding Data.Reference.Data, Converter={StaticResource IconConverter}}" />
                         <TextBlock Text="{Binding Data.Name}" />
                     </DockPanel>
                 </HierarchicalDataTemplate>
