--- a/RainmeterStudio.TextEditor/TextEditorControl.xaml
+++ b/RainmeterStudio.TextEditor/TextEditorControl.xaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TextBox Name="text" AcceptsReturn="True" />
+        <TextBox Name="text" AcceptsReturn="True"
+                 TextChanged="text_TextChanged"/>
     </Grid>
 </UserControl>
