--- a/RainmeterStudio/UI/App.xaml
+++ b/RainmeterStudio/UI/App.xaml
@@ -13,7 +13,13 @@
             <Style TargetType="ToolBarTray">
                 <Setter Property="Background" Value="Transparent" />
             </Style>
-            
+
+            <Style x:Key="CommandContextMenuItemStyle" TargetType="MenuItem">
+                <Setter Property="Command" Value="{Binding}" />
+                <Setter Property="Header" Value="{Binding DisplayText}" />
+                <Setter Property="ToolTip" Value="{Binding ToolTip}" />
+            </Style>
+
             <Style x:Key="CommandMenuItemStyle" TargetType="MenuItem">
                 <Setter Property="Command" Value="{Binding}" />
                 <Setter Property="Header" Value="{Binding DisplayText}" />
