--- a/RainmeterStudio/UI/Panels/ProjectPanel.xaml
+++ b/RainmeterStudio/UI/Panels/ProjectPanel.xaml
@@ -44,12 +44,15 @@
         
         <!-- Project item tree  -->
         <TreeView Grid.Row="2" Name="treeProjectItems">
+            
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
                     <EventSetter Event="Expanded" Handler="TreeViewItem_ExpandedOrCollapsed" />
                     <EventSetter Event="Collapsed" Handler="TreeViewItem_ExpandedOrCollapsed" />
+                    <EventSetter Event="PreviewMouseRightButtonDown" Handler="TreeViewItem_PreviewMouseRightButtonDown" />
+                    <EventSetter Event="PreviewMouseDoubleClick" Handler="TreeViewItem_PreviewMouseDoubleClick" />
                 </Style>
             </TreeView.ItemContainerStyle>
             <TreeView.ItemTemplate>
